--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,5 @@ jobs:
         go-version: 1.16
 
     - name: CI
+      run: curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
       run: make deploy
