--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,24 +2,25 @@ name: Deploy
 
 on:
   push:
-    branches: 
-    - main
+    branches:
+      - main
   pull_request:
-    branches: 
-    - main
+    branches:
+      - main
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.16
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
 
-    - name: CI
-      run: curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-      run: make deploy
+      - name: Go-dep
+        run: curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+
+      - name: CI
+        run: make deploy
