--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,11 +19,10 @@ jobs:
         with:
           go-version: 1.16
 
-      - name: Env
-        run: export GOPATH=/home/runner/work/go-aws-arch/go-aws-arch
+      - name: Install Serverless Framework
+        run: npm install -g serverless
+      - name: Serverless AWS authentication
+        run: sls config credentials --provider aws --key ${{ secrets.AWS_KEY }} --secret ${{ secrets.AWS_SECRET }}
 
-      - name: Go-dep
-        run: curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-
-      - name: CI
+      - name: Deploy
         run: make deploy
